update expandable enums